--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               użyciu aplikacji Kahoot!. Znajdziesz tu przewodniki krok po kroku
               oraz inspiracje na tworzenie własnych interaktywnych quizów i gier
               edukacyjnych. Zapraszamy do odwiedzenia strony i odkrycia
-              możliwości, jakie oferuje Kahoot!.
+              możliwości, jakie oferuje Kahoot!
             </p>
           </div>
         </section>
