--- a/propozycje.html
+++ b/propozycje.html
@@ -56,34 +56,34 @@
               <li>Przedstawienie celu lekcji</li>
               <li>
                 Wprowadzenie do aplikacji Kahoot - krótkie wyjaśnienie, czym
-                jest Kahoot i jak może być wykorzystany do burzy mózgów
+                jest Kahoot i jak może być wykorzystany do burzy mózgów.
               </li>
               <li>
                 Nauczyciel przedstawia temat, który będzie przedmiotem burzy
-                mózgów
+                mózgów.
               </li>
               <li>
                 Nauczyciel uruchamia quiz Kahoot z pytaniami otwartymi, na które
-                uczniowie mogą odpowiadać indywidualnie lub w małych grupach
+                uczniowie mogą odpowiadać indywidualnie lub w małych grupach.
               </li>
               <li>
                 Po zakończeniu sesji generowania pomysłów, nauczyciel
-                przedstawia odpowiedzi na ekranie
+                przedstawia odpowiedzi na ekranie.
               </li>
               <li>
                 Nauczyciel omawia wyniki głosowania, podkreślając najciekawsze i
-                najbardziej innowacyjne pomysły
+                najbardziej innowacyjne pomysły.
               </li>
               <li>
                 Nauczyciel podsumowuje przebieg lekcji, podkreślając znaczenie
-                kreatywności i współpracy w procesie rozwiązywania problemów
+                kreatywności i współpracy w procesie rozwiązywania problemów.
               </li>
             </ol>
           </div>
         </section>
         <section class="useCases--section useCases--section__second">
           <div class="useCases--textBlock">
-            <h2>Utrwalanie wiedzy za pomocą quizów Kahoot</h2>
+            <h2>Utrwalanie wiedzy za pomocą quizów Kahoot.</h2>
             <h3>
               Cel lekcji: Powtórzenie i utrwalenie wiedzy za pomocą
               interaktywnego quizu Kahoot
@@ -96,7 +96,7 @@
 
             <h6>Przebieg zajęć:</h6>
             <ol>
-              <li>Przedstawienie celu lekcji</li>
+              <li>Przedstawienie celu lekcji.</li>
               <li>
                 Nauczyciel wybiera wcześniej przygotowany quiz Kahoot związany z
                 tematem lekcji lub pozwala uczniom na wybór quizu z bazy
