--- a/krok-po-kroku.html
+++ b/krok-po-kroku.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src *;
+   img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
+   style-src  'self' 'unsafe-inline' *"
+    />
     <title>Instrukcja krok po kroku</title>
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./header.css" />
